--- a/front.html
+++ b/front.html
@@ -15,6 +15,7 @@
 </div>
 <script>
 (function() {
+    var gData = {};
     // Function to shuffle the options and correct indexes together
     function shuffleOptionsAndAnswers(options, answerIndexes) {
         let shuffledOptions = options.map((option, index) => ({ option, index }));
