--- a/back.html
+++ b/back.html
@@ -39,6 +39,7 @@
 
 <script>
 (function() {
+    var gData = {};
     var optionsHtml = `{{选项}}`;
     var options = optionsHtml.split('<br>').map(option => option.trim()).filter(option => option !== '');
     var answer = '{{答案}}';
